# Solution_Tasks

./: .gitignore  MCP_CONFIG.md  README.md  pyproject.toml  requirements.txt
.opencode/skills/SolutionTasksExpert/: SKILL.md
.opencode/skills/SolutionTasksExpert/workflows/: daily-review.md  gap-closure.md  onboarding.md
default_schemas/: document-schema.json  example-testing-task.json  implementation-schema.json  testing-schema.json
docs/: impact-analysis-document-loader.md
docs/Tasks/: 01-spec-parser-module.md  02-document-schema.md  03-revised-implementation-schema.md  04-load-docs-command.md  05-mcp-tools-update.md  06-tests.md  07-migration-legacy-data.md
spec_parser/: __init__.py  extractor.py  loader.py  parser.py
task_cli/: __init__.py  main.py  mcp_server.py
task_cli/data/: engine.py  store.py
task_cli/history/: tracker.py
task_cli/presentation/: __init__.py  catalog.py  commands.py  report.py
task_cli/registry/: __init__.py  base.py
task_cli/schemas/: __init__.py  document.py  implementation.py  testing.py
task_cli/utils/: __init__.py  port.py
task_cli/validation/: business_rules.py  validator.py
tests/: conftest.py  test_business_rules.py  test_catalog.py  test_commands.py  test_engine.py  test_history.py  test_integration.py  test_mcp_server.py  test_parser.py  test_port_utils.py  test_registry.py  test_relationships.py  test_report.py  test_store.py  test_validator.py
tests/testdata/: sample-spec.md
